Applied review comments of r6d62078d47