@@ -23,19 +23,19 @@ class SaverBase {
     }
 
     protected void addAttribute(String name, String value, AttributesImpl attrs) {
-    	if (value!=null) { 
-    		attrs.addAttribute("", name, name, "CDATA", value);
-    	}
+        if (value!=null) {
+            attrs.addAttribute("", name, name, "CDATA", value);
+        }
     }
 
-	protected void addAttribute(String name, int value, AttributesImpl attrs) {
-		addAttribute(name, String.valueOf(value), attrs);
-	}
-    
-	protected void addAttribute(String name, boolean value, AttributesImpl attrs) {
-        addAttribute(name, new Boolean(value).toString(), attrs);
-	}
-	
+    protected void addAttribute(String name, int value, AttributesImpl attrs) {
+        addAttribute(name, String.valueOf(value), attrs);
+    }
+
+    protected void addAttribute(String name, boolean value, AttributesImpl attrs) {
+        addAttribute(name, Boolean.valueOf(value), attrs);
+    }
+
     protected void emptyElement(String name, AttributesImpl attrs,
             TransformerHandler handler) throws SAXException {
         startElement(name, attrs, handler);
